build_p4_r16/log/idf_py_stdout_output_7672
Command: ninja all
[1/12] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\andri\Documents\GitHub\trae_controller\build_p4_r16\bootloader && C:\Users\andri\.espressif\python_env\idf6.0_py3.13_env\Scripts\python.exe C:/esp/.espressif/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 C:/Users/andri/Documents/GitHub/trae_controller/build_p4_r16/bootloader/bootloader.bin"
Bootloader binary size 0x5da0 bytes. 0x260 bytes (2%) free.
[2/12] No install step for 'bootloader'
[3/12] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\andri\Documents\GitHub\trae_controller\build_p4_r16 && C:\Users\andri\Documents\GitHub\trae_controller\build_p4_r16\littlefs_py_venv\Scripts\littlefs-python.exe create C:/Users/andri/Documents/GitHub/trae_controller/firmware/data C:/Users/andri/Documents/GitHub/trae_controller/build_p4_r16/storage.bin -v --fs-size=0x350000 --name-max=64 --block-size=4096"
LittleFS Configuration:
  Block Size:       4096  /  0x1000
  Image Size:    3473408  /  0x350000
  Block Count:       848
  Name Max:           64
  Image:       C:\Users\andri\Documents\GitHub\trae_controller\build_p4_r16\storage.bin
Adding Directory: assets
Adding Directory: fonts
Adding File:      history.html
Adding File:      index.html
Adding File:      manifest.json
Adding File:      mqtt_gateway.html
Adding File:      touch_calibration.html
Adding File:      wifi_setup.html
Adding File:      assets\index-1e2b07f5.js
Adding File:      assets\index-1e2b07f5.js.gz
Adding File:      assets\index-f001c656.css
Adding File:      assets\index-f001c656.css.gz
Adding File:      assets\vendor-562bd106.js
Adding File:      assets\vendor-562bd106.js.gz
Adding File:      assets\vendor-charts-d47e8fd5.js
Adding File:      assets\vendor-charts-d47e8fd5.js.gz
Adding File:      assets\vendor-react-69cc1413.js
Adding File:      assets\vendor-react-69cc1413.js.gz
Adding File:      fonts\README.md
Adding Directory: fonts\sketch_260307b
Adding Directory: fonts\sketch_260307b\data
Adding Directory: fonts\sketch_260307b\FontFiles
Adding File:      fonts\sketch_260307b\sketch_260307b.pde
Adding Directory: fonts\sketch_260307b\sketch_260308c
Adding File:      fonts\sketch_260307b\data\Final-Frontier.ttf
Adding File:      fonts\sketch_260307b\FontFiles\PTSans-Bold.ttf
Adding File:      fonts\sketch_260307b\FontFiles\PTSans-BoldItalic.ttf
Adding File:      fonts\sketch_260307b\FontFiles\PTSans-Italic.ttf
Adding File:      fonts\sketch_260307b\FontFiles\PTSans-Regular.ttf
Adding File:      fonts\sketch_260307b\FontFiles\System_Font_List.txt
Adding File:      fonts\sketch_260307b\sketch_260308c\sketch_260308c.pde
[4/12] Completed 'bootloader'
[5/12] Generating C:/Users/andri/Documents/GitHub/trae_controller/firmware/slint_ui/target/riscv32imafc-esp-espidf/release/libslint_ui.a
FAILED: C:/Users/andri/Documents/GitHub/trae_controller/firmware/slint_ui/target/riscv32imafc-esp-espidf/release/libslint_ui.a 
C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\andri\Documents\GitHub\trae_controller\firmware\slint_ui && C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -ExecutionPolicy Bypass -NoProfile -Command "& C:\Users\andri/export-esp.ps1; $env:RUSTUP_TOOLCHAIN='esp'; $env:RUSTFLAGS='-Cdebuginfo=0 -Clink-arg=/PDB:NONE'; $env:CARGO_PROFILE_RELEASE_DEBUG='0'; $env:CARGO_PROFILE_RELEASE_BUILD_OVERRIDE_DEBUG='0'; & C:\Users\andri/.cargo/bin/cargo.exe build --release --target riscv32imafc-esp-espidf -Z build-std=core,alloc,std,panic_abort""
   Compiling slint_ui v0.1.0 (C:\Users\andri\Documents\GitHub\trae_controller\firmware\slint_ui)
error[E0624]: method `get_density` is private
     --> src\lib.rs:2203:22
      |
 2203 |     let density = ui.get_density().max(1.0);
      |                      ^^^^^^^^^^^ private method
      |
     ::: C:\Users\andri\Documents\GitHub\trae_controller\firmware\slint_ui\target\riscv32imafc-esp-espidf\release\build\slint_ui-34b7de483d7f970f\out\app.rs:95751:32
      |
95751 |          # [allow (dead_code)] fn get_density (& self , _private_property : ()) {
      |                                ------------------------------------------------ private method defined here

For more information about this error, try `rustc --explain E0624`.
error: could not compile `slint_ui` (lib) due to 1 previous error
ninja: build stopped: subcommand failed.
